--- a/support-retail-copilot/requirements.txt
+++ b/support-retail-copilot/requirements.txt
@@ -1,7 +1,7 @@
 promptflow
 promptflow-tools
 azure-cosmos
-azure-search-documents==11.4.0b8
+azure-search-documents
 azure-ai-ml
 azure-identity
 chainlit
